Fixed layout alignment

--- a/src/app/util/tablify.component.css
+++ b/src/app/util/tablify.component.css
@@ -2,7 +2,7 @@
   white-space: nowrap;
   display: flex;
   flex-direction: column;
-  min-width:800px;
+  min-width:500px;
   width: 100%;
   max-height:800px;
 }
